meja/tests/opaque-prover-mode.stderr
File "tests/opaque-prover-mode.meja", line 2, characters 11-22:
Error: The type opaque(int) is not valid in this mode:
       opaque types cannot be created in Prover mode.
