meja/tests/opaque-prover-mode.meja
Prover {
  type t = opaque(int);
};
